style.css
/* ... */
h2, h3, h4, h4, h5, h6 {
	text-transform: uppercase !important;
  font-size: 1.6em !important;
  letter-spacing: 0.7px;
  margin: 15px 0;
}

.mjx-hdr {
  line-height: 1.2em !important;
  font-size: 1.6em !important;
}

hr {
  border: solid #fff 1px !important;
}


span.mjx-em-txt {
  color: #CF6900;
  font-style: italic;
}

/*-----------------[MAJUX BUTTON STYLES]-----------------*/

.mjx-lrn-more-bttn {
  padding: 5px 50px !important;
}

.mjx-info-bttn-1 {
  position: relative !important;
  border: 1px solid !important;
  -webkit-border-radius: 3px !important;
  -moz-border-radius: 3px !important;
  border-radius: 3px !important;
  font-size: 13px !important;
  font-weight: 500 !important;
}

.mjx-info-bttn-1:after {
  position: absolute;
  opacity: 0;
  font-size: 15px;
  line-height: 1.6em;
  content: "\41";
  padding-left: 0px !important;
}

.mjx-info-bttn-1 {
    margin-top: 15px !important;
}

.message-wrapper.with-name {
  display: none !important;
}

/*--------------[DIVI HEADER BUG FIX]-------------*/

#page-container {
  padding-top: 80px !important;
}

.et_header_style_left .logo_container {
  position: absolute;
  width: 90%;
  height: 100%;
}

/*------------[DIVI SEARCH SIZE STYLES]-----------*/

.et-search-form input {
  position: absolute;
  top: 0;
  right: 30px;
  bottom: 0;
  width: 70%;
  margin: auto;
  border: none;
  color: #333;
  background: transparent;
}

/*------------------------------------------------*/
/*---------------[MAIN LAYOUT INFO]---------------*/
/*------------------------------------------------*/



/*------------------------------------------------*/
/*-----------------[NAV STYLES]-------------------*/
/*------------------------------------------------*/



/*------------------------------------------------*/
/*----------------[BANNER STYLES]-----------------*/
/*------------------------------------------------*/

/*----------[MAJUX HOME BANNER STYLES]--------*/

.mjx-hm-bnnr-sctn {
    padding: 14% 0 !important;
}

/*------------------------------------------------*/
/*-------------[MAJUX HOME PAGE STYLES]-----------*/
/*------------------------------------------------*/


/*----------[MAJUX HOME ICONS BAND STYLES]--------*/

.mjx-srvcs-sctn {
  padding: 1% 0 !important;
}

.mjx-icns-col {
	float: left;
	width: 25% !important;
}

.mjx-icns-col img {
  max-width: 90%;
  height: auto;
  padding: 0 5% 0 40%;
}

.mjx-icns-row-1 {
	overflow: hidden; /* "overflow: auto;" works just as well instead */
	width:100%; /* Helps older versions of IE */
}

h2.srvce-lbl {
  color: #005B7F;
  letter-spacing: 0px !important;
  margin-top: 5px;
}

.mjx-icns-row-1 {
  overflow: hidden;
  width: 100%;
  padding-top: 1% !important;
}

a.mjx-srvc-lnk :hover {
  color: #EA7600 !important;
}



/*--------[MAJUX HOME CONTENT BOX STYLES 1]-------*/

.mjx-cntnt-sctn-1 {
  padding: 0 !important;
}

.mjx-cntnt-row-1 {
  padding: 0 !important;
}

.mjx-cntnt-col-1a {
  padding: 4rem !important;
}


/*--------[MAJUX HOME CONTENT BOX STYLES 2]-------*/


.mjx-cntnt-sctn-2 {
  padding: 0 !important;
}

.mjx-cntnt-row-2 {
  padding: 0 !important;
}

.mjx-cntnt-col-2b {
  padding: 4rem !important;
}


/*--------[MAJUX HOME CONTENT BOX STYLES 3]-------*/

.mjx-cntnt-sctn-3 {
  padding: 0 !important;
}

.mjx-cntnt-row-3 {
  padding: 0 !important;
}

.mjx-cntnt-col-3a {
  padding: 4rem !important;
  background: #ccc !important;
}

.et_pb_counter_container {
  display: block;
  overflow: hidden;
  position: relative;
  margin-bottom: 10px;
  color: #fff;
  background-color: #eee !important;
  border-radius: 10px !important;
}


/*--------[MAJUX HOME CONTENT BOX STYLES 4]-------*/


.mjx-cntnt-sctn-4 {
  padding: 0 !important;
}

.mjx-cntnt-row-4 {
  padding: 0 !important;
}

.mjx-cntnt-col-4b {
  padding: 4rem !important;
}


/*--------[MAJUX HOME CONTENT BOX STYLES 5]-------*/


.mjx-cntnt-sctn-5 {
  padding: 0 !important;
}

.mjx-cntnt-row-5 {
  padding: 0 !important;
}

.mjx-cntnt-col-5b {
  padding: 3rem !important;
}


/*--------[MAJUX HOME TRUST BAR STYLES]-------*/

/* MAJUX TRUST ICONS SECTIONS  */

.mjx-trst-br-sctn {
  padding: 2% 0 !important;
}

.mjx-trst-br-row {
  padding: 0% 0 !important;
}

.mjx-trst-br-ttl {
  line-height: 20px;
}

.mjx-trst-ico-section {
  clear: both;
  padding: 0px;
  margin: 0 auto !important;
}

.mjx-trst-ico-section img{
  width: 70% !important;
  height: 70% !important;
  margin: 0 auto;
}

.trst-ico-wrppr {
  padding:5px;
  margin: 5px;
  display: inline-flex;
}

/*  COLUMN SETUP  */
.mjx-trst-ico-col {
  display: block;
  float:left;
  margin: 1% 0 1% 1.2%;
}
.mjx-trst-ico-col:first-child { margin-left: 0; }

/*  GROUPING  */
.mjx-trst-ico-group:before,
.mjx-trst-ico-group:after { content:""; display:table; }
.mjx-trst-ico-group:after { clear:both;}
.mjx-trst-ico-group { zoom:1; /* For IE 6/7 */ }

/*  GRID OF SIX  */
.mjx-trst-ico-span_6_of_6 {
  width: 100%;
}

.mjx-trst-ico-span_5_of_6 {
    width: 83.13%;
}

.mjx-trst-ico-span_4_of_6 {
    width: 66.26%;
}

.mjx-trst-ico-span_3_of_6 {
    width: 49.4%;
}

.mjx-trst-ico-span_2_of_6 {
    width: 32.53%;
}

.mjx-trst-ico-span_1_of_6 {
    width: 15.66%;
}

/*  GO FULL WIDTH BELOW 480 PIXELS */

@media only screen and (max-width: 780px) {
  .mjx-trst-ico-span_1_of_6, .mjx-trst-ico-span_2_of_6, .mjx-trst-ico-span_3_of_6, .mjx-trst-ico-span_4_of_6, .mjx-trst-ico-span_5_of_6, .mjx-trst-ico-span_6_of_6 { 
    width: 30%; 
  }
}

@media only screen and (max-width: 480px) {
  .mjx-trst-ico-col {  
    margin: 1% 0 1% 0%; 
  }
  
  .mjx-trst-ico-span_1_of_6, .mjx-trst-ico-span_2_of_6, .mjx-trst-ico-span_3_of_6, .mjx-trst-ico-span_4_of_6, .mjx-trst-ico-span_5_of_6, .mjx-trst-ico-span_6_of_6 { 
    width: 50%; 
  }
}

/*------------------------------------------------*/
/*------------[MAJUX ABOUT PAGE STYLES]-----------*/
/*------------------------------------------------*/


/*-------[MAJUX ABOUT BANNER SECTION STYLES]------*/

.mjx-abt-bnnr-sctn {
  padding: 5% 0 0 0 !important;
}
/* ... */

